# colcon-python-project

./: README.rst  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yaml
colcon_python_project/: __init__.py  _call_hook.py  hook_caller.py  metadata.py  spec.py  wheel.py
colcon_python_project/argument_parser/: .python_project.py.swp  python_project.py
colcon_python_project/hook_caller/: __init__.py
colcon_python_project/hook_caller_decorator/: __init__.py  setuptools.py
colcon_python_project/package_augmentation/: ament_python_project.py  pep517.py  pep621.py
colcon_python_project/package_identification/: pep517.py  pep517_setuptools_fallback.py  pep621.py
colcon_python_project/task/ament_python/project/: build.py
colcon_python_project/task/python/project/: build.py  test.py
test/: conftest.py  spell_check.words  test_flake8.py  test_hook_caller_setuptools.py  test_hooks.py  test_pipeline.py  test_spell_check.py
test/backend_fixtures/: __init__.py  flit.py  legacy.py  poetry.py  setuptools.py
