[metadata]
name = colcon-python-project
version = attr: colcon_python_project.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-python-project/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-python-project/
author = Scott K Logan
author_email = logans@cottsay.net
maintainer = Scott K Logan
maintainer_email = logans@cottsay.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extensions for colcon to work with Python packages which use pyproject.toml.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.12.0
  distlib
  tomli>=1.0.0;python_version < "3.11"
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-asyncio
  pytest-cov
  scspell3k>=2.2
  setuptools>=40.8.0

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-python-project

[options.entry_points]
colcon_core.extension_point =
    colcon_python_project.hook_caller_decorator = colcon_python_project.hook_caller_decorator:HookCallerDecoratorExtensionPoint
colcon_core.package_augmentation =
    pep517 = colcon_python_project.package_augmentation.pep517:PEP517PackageAugmentation
    pep621 = colcon_python_project.package_augmentation.pep621:PEP621PackageAugmentation
colcon_core.package_identification =
    pep517 = colcon_python_project.package_identification.pep517:PEP517PackageIdentification
    pep517_setuptools_fallback = colcon_python_project.package_identification.pep517_setuptools_fallback:PEP517SetuptoolsFallbackPackageIdentification
    pep621 = colcon_python_project.package_identification.pep621:PEP621PackageIdentification
colcon_core.task.build =
    python.project = colcon_python_project.task.python.project.build:PythonProjectBuildTask
colcon_core.task.test =
    python.project = colcon_python_project.task.python.project.test:PythonProjectTestTask
colcon_python_project.hook_caller_decorator =
    setuptools = colcon_python_project.hook_caller_decorator.setuptools:SetuptoolsHookCallerDecoratorExtension

[flake8]
import-order-style = google

[coverage:run]
source = colcon_python_project
